deploy/faf-league-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faf-league-service
  labels:
    app: faf-league-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faf-league-service
  template:
    metadata:
      labels:
        app: faf-league-service
    spec:
      containers:
        - image: faforever/faf-league-service:1.5.0
          name: faf-league-service
      restartPolicy: Always
