deploy/faf-ws-bridge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: faf-ws-bridge
  name: faf-ws-bridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faf-ws-bridge
  template:
    metadata:
      labels:
        app: faf-ws-bridge
    spec:
      containers:
        - image: faforever/ws_bridge_rs:0.1.4
          args: ["ws_to_tcp", "-vvv", "0.0.0.0:8003", "faf-lobby-server:8003"]
          name: faf-ws-bridge
          ports:
            - containerPort: 8003
      restartPolicy: Always
