deploy/faf-lobby-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faf-lobby-server
  labels:
    app: faf-lobby-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faf-lobby-server
  template:
    metadata:
      labels:
        app: faf-lobby-server
    spec:
      terminationGracePeriodSeconds: 3600
      containers:
        - image: faforever/faf-python-server:v1.15.1
          name: faf-lobby-server
          volumeMounts:
            - mountPath: /config/config.yaml
              name: faf-lobby-server
              subPath: "config.yaml"
          ports:
            - name: websocket
              containerPort: 8003
          startupProbe:
            httpGet:
              port: 2000
              path: /ready
            initialDelaySeconds: 10
            failureThreshold: 30
            periodSeconds: 3
          livenessProbe:
            httpGet:
              port: 2000
              path: /ready
            failureThreshold: 3
            periodSeconds: 10
      restartPolicy: Always
      volumes:
        - name: faf-lobby-server
          configMap:
            name: faf-lobby-server

---
apiVersion: v1
kind: Service
metadata:
  name: faf-lobby-server
  labels:
    app: faf-lobby-server
spec:
  selector:
    app: faf-lobby-server
  ports:
    - name: websocket
      port: 8003
      targetPort: 8003
