deploy/faf-policy-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faf-policy-server
  labels:
    app: faf-policy-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faf-policy-server
  template:
    metadata:
      labels:
        app: faf-policy-server
    spec:
      containers:
        - image: faforever/faf-policy-server:v1.22
          name: faf-policy-server
          ports:
            - containerPort: 8097
          volumeMounts:
            - mountPath: /app/verifier
              name: uid-verifier
      volumes:
        - name: uid-verifier
          emptyDir: {}
          
---
apiVersion: v1
kind: Service
metadata:
  name: faf-policy-server
  labels:
    app: faf-policy-server
spec:
  selector:
    app: faf-policy-server
  ports:
    - port: 8097
      targetPort: 8097
