deploy/faf-replay-server.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: faf-replay-server
  labels:
    app: faf-replay-server
spec:
  serviceName: faf-replay-server
  replicas: 1
  selector:
    matchLabels:
      app: faf-replay-server
  template:
    metadata:
      labels:
        app: faf-replay-server
    spec:
      containers:
        - image: faforever/faf-rust-replayserver:0.3.2
          name: faf-replay-server
          ports:
            - name: replay-stream
              containerPort: 15000
          volumeMounts:
            - name: config
              mountPath: /config/config.yaml
              subPath: config.yaml
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: faf-replay-server
            
---
apiVersion: v1
kind: Service
metadata:
  name: faf-replay-server
  labels:
    app: faf-replay-server
spec:
  selector:
    app: faf-replay-server
  ports:
    - name: replay-stream
      port: 15000
      targetPort: 15000
