deploy/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: faf-db
  name: faf-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faf-db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: faf-db
    spec:
      containers:
      - image: mariadb:10.6
        name: mariadb
        resources: {}
        readinessProbe:
          exec:
            command: ["mysqladmin", "ping", "-uroot", "-h127.0.0.1"]
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: faf-db
spec:
  selector:
    app: faf-db
  ports:
  - port: 3306
