deploy/faf-ice-breaker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faf-ice-breaker
  labels:
    app: faf-ice-breaker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faf-ice-breaker
  template:
    metadata:
      labels:
        app: faf-ice-breaker
    spec:
      containers:
        - image: faforever/faf-icebreaker:1.0.5
          name: faf-ice-breaker
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              port: 8080
              path: /q/health
            failureThreshold: 10
            periodSeconds: 3
          livenessProbe:
            httpGet:
              port: 8080
              path: /q/health
            failureThreshold: 3
            periodSeconds: 10
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: faf-ice-breaker
  labels:
    app: faf-ice-breaker
spec:
  selector:
    app: faf-ice-breaker
  ports:
    - port: 8080
      targetPort: 8080
      
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: faf-ice-breaker-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /ice
      
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: faf-ice-breaker-api
spec:
  entryPoints:
    - api
  routes:
    - match: Host(`localhost`) && PathPrefix(`/ice`)
      kind: Rule
      services:
        - name: faf-ice-breaker
          port: 8080
      middlewares:
        - name: faf-ice-breaker-stripprefix
        
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: faf-ice-breaker-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.localhost`) && PathPrefix(`/ice`)
      kind: Rule
      services:
        - name: faf-ice-breaker
          port: 8080
      middlewares:
        - name: faf-ice-breaker-stripprefix
