deploy/ory-hydra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ory-hydra
  labels:
    app: ory-hydra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ory-hydra
  template:
    metadata:
      labels:
        app: ory-hydra
    spec:
      containers:
        - image: oryd/hydra:v1.11.10
          name: ory-hydra
          ports:
            - containerPort: 4444
            - containerPort: 4445
          readinessProbe:
            httpGet:
              port: 4444
              path: /.well-known/openid-configuration
            initialDelaySeconds: 10
            failureThreshold: 5
            periodSeconds: 3
          periodSeconds: 5
          args: [ "serve", "all", "--dangerous-force-http"]
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: ory-hydra
  labels:
    app: ory-hydra
spec:
  selector:
    app: ory-hydra
  ports:
    - name: public-port
      port: 4444
      targetPort: 4444
    - name: admin-port
      port: 4445
      targetPort: 4445
      
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ory-hydra
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hydra.localhost`)
      kind: Rule
      services:
        - name: ory-hydra
          port: 4444
