deploy/rabbitmq.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  serviceName: rabbitmq
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - image: rabbitmq:3.13.3-management-alpine
          name: rabbitmq
          ports:
            - containerPort: 5672
              name: amqp
              protocol: TCP
            - containerPort: 15672
              name: webinterface
              protocol: TCP
          readinessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "is_running"]
            initialDelaySeconds: 10
            timeoutSeconds: 15
          volumeMounts:
            - name: config
              mountPath: /etc/rabbitmq/enabled_plugins
              subPath: enabled_plugins
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: rabbitmq

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - name: message
      port: 5672
      targetPort: 5672
    - name: dashboard
      port: 15672
      targetPort: 15672

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rabbitmq
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rabbitmq.localhost`)
      kind: Rule
      services:
        - name: rabbitmq
          port: 15672
